# PaperSpider

./: .gitignore  README.md  config.json  config.py  main.py  pyproject.toml  util.py
parser/: detail_parser.py  search_parser.py
