[project]
name = "paperspider"
version = "0.1.0"
description = "一个用于获取来自 Letpub 的论文数据的工具。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
